# puls-events-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  rag_chain.py
scripts/: api_test.py  build_vectorstore.py  debug_columns.py  evaluate_rag.py  fetch_openagenda.py  test_rag_chain.py  test_search_vectorstore.py
tests/: test_env.py  test_openagenda_data.py
